# jules-2-main

./: .gitignore  BENCHMARKS.md  BENCHMARK_ERRORS.md  Cargo.toml  DOCUMENTATION.md  Maintainer_Practices.md  SECURITY.md  add  advanced_optimizer.rs  agents.md  architechture.md  bugcrawl.md  build.rs  bytecode_vm.rs  deslop.md  interp.rs  main.rs  memory_management.rs  phase3_jit.rs  polyhedral.rs  security-policy.md  simple  tiered_compilation.rs  tracing_jit.rs  workflow.md  worklog.md
agent-ctx/: task1-dead-code-wiring.md
benches/: bench_1b_jit.rs  bench_1t_polyhedral.rs  bench_ecs.rs  bench_inferno.rs  bench_jhal.rs  bench_jit_comprehensive.rs  bench_jit_fast.rs  bench_polyhedral.rs  bench_speed.rs  bench_tracing_jit.rs  quick_inferno.rs
compiler/: loom_model_check.rs  mod.rs  sat_smt_solver.rs
examples/: dump-bug-ir.rs  dump_ir.rs  jit_hang_test.rs
jit/: aot_native.rs  phase3_jit.rs  tracing_jit.rs
ml/: ml_engine.rs  mod.rs  superopt_xla_bridge.rs
optimizer/: advanced_optimizer.rs
runtime/: gpu_backend.rs  interp.rs  mod.rs
runtime/threading/: affinity.rs  deque.rs  ecs_lockfree.rs  gpu_pipeline.rs  green.rs  hw_optimizations.rs  hyper_sparse.rs  join.rs  lossy_computation.rs  mod.rs  novel_scheduling.rs  numa.rs  rseq.rs  slab.rs  soa_queue.rs  stack_task.rs  superopt_integration.rs  worker.rs
scripts/: build-with-smt.sh  run_benchmarks.sh
src/: lib.rs  main.rs  micro-benchmark.rs  polyhedral.rs
src/compiler/: ast.rs  borrowck.rs  diagnostic.rs  diff_opt.rs  error_codes.rs  formal_verify.rs  hw_feedback.rs  ir.rs  ir_borrowck.rs  ir_to_bytecode.rs  ir_typeck.rs  lexer.rs  loom_model_check.rs  lower.rs  mod.rs  parser.rs  sat_smt_solver.rs  sema.rs  translation_validation.rs  typeck.rs
src/game/: game_systems.rs  mod.rs
src/jit/: aot_native.rs  mod.rs  neural_superblock.rs  phase3_jit.rs  phase6_simd.rs  temporal_fusion.rs  tracing_jit.rs
src/jules_flux/: amx_kernels.rs  mod.rs  tile.rs
src/jules_std/: ai.rs  alloc.rs  aurora_flux.rs  aurora_threading.rs  collections.rs  collision.rs  gaussian_splat.rs  genesis_weave.rs  geometry.rs  math.rs  mod.rs  morton.rs  net.rs  noise.rs  pathfind.rs  prng_simd.rs  random.rs  sdf_ray.rs  sieve_210.rs  simd_batch.rs  simd_math.rs  spatial.rs  sprite_pipe.rs  voxel_mesh.rs  vpl_lighting.rs
src/ml/: chess_ml.rs  kernel_types.rs  ml_engine.rs  ml_engine_enhanced.rs  ml_engine_ultimate.rs  mod.rs  superopt_xla_bridge.rs  xla_backend.rs
src/optimizer/: abstraction_verify.rs  advanced_optimizer.rs  advanced_self_repair.rs  alias_layout.rs  autovec.rs  autovec_bridge.rs  data_dependent_jit.rs  dead_field_elim.rs  gnn_egraph_optimizer.rs  gnn_trained_weights.rs  hardware_cost_model.rs  inline_cache.rs  known_bits.rs  learned_scheduler.rs  machine_instr_model.rs  mcts_core.rs  mcts_superoptimizer.rs  memory_optimizer.rs  ml_superopt.rs  mod.rs  multi_tier_jit.rs  optimizer.rs  partial_eval.rs  polyhedral.rs  profile_guided.rs  self_repair.rs  semantic_superopt.rs  smt_verify.rs  soa_optimizer.rs  superopt_pass.rs  tiered_compilation.rs  uarch_cost.rs  whole_program_dce.rs
src/runtime/: bytecode_vm.rs  gpu_backend.rs  heterogeneous_memory.rs  interp.rs  io_uring.rs  memory_management.rs  mod.rs  networking.rs  speculative_memory.rs  symbol.rs
src/runtime/jhal/: identity_map.rs  io_port.rs  irq_injection.rs  local_apic.rs  mmio.rs  mod.rs  pcie.rs  serial_uart.rs  sfi.rs  tsx.rs
src/runtime/threading/: affinity.rs  cross_boundary.rs  deque.rs  disruptor.rs  ecs_lockfree.rs  egraph_schedule.rs  epoch.rs  gpu_pipeline.rs  green.rs  hw_optimizations.rs  hyper_sparse.rs  jit_scheduler.rs  join.rs  kernel_bypass.rs  lossy_computation.rs  mod.rs  novel_scheduling.rs  numa.rs  percpu_deque.rs  prophecy.rs  prophetic_prefetch.rs  rseq.rs  rseq_integration.rs  slab.rs  soa_queue.rs  stack_task.rs  superopt_integration.rs  worker.rs
src/tools/: ast_dump.rs  bench_adversarial.rs  bench_extreme.rs  bench_genesis_weave.rs  bench_interp_vs_rust.rs  bench_mcts_superopt.rs  bench_optimizations.rs  bench_prime_race.rs  ffi.rs  fib_debug.rs  mod.rs  pipeline_debug.rs  string_intern.rs  superopt_debug.rs  throughput_sanity.rs  train_gnn.rs  vm_debug.rs
tools/: mod.rs
tools/gnn_train/: gnn_weights.json  gnn_weights_depth9.json  train_gnn.py  train_gnn_depth9.py
