[package]
name = "jules"
version = "0.2.0"
edition = "2021"
authors = ["jules"]
description = "Jules programming language compiler/interpreter with game dev, ML, and FFI support"
license = "MIT"
autobenches = false

[lib]
name = "jules"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jules"
path = "src/main.rs"

[[bin]]
name = "bench-ecs"
path = "benches/bench_ecs.rs"

[[bin]]
name = "micro-benchmark"
path = "src/micro-benchmark.rs"

[[bin]]
name = "bench-chess-ml"
path = "src/tools/bench_chess_ml.rs"

[[bin]]
name = "bench-interp-vs-rust"
path = "src/tools/bench_interp_vs_rust.rs"

[[bin]]
name = "bench-prime-race"
path = "src/tools/bench_prime_race.rs"

[[bin]]
name = "bench-extreme"
path = "src/tools/bench_extreme.rs"

[[bin]]
name = "bench-genesis-weave"
path = "src/tools/bench_genesis_weave.rs"

[[bin]]
name = "bench-mcts-superopt"
path = "src/tools/bench_mcts_superopt.rs"
required-features = ["gnn-optimizer"]

[[bin]]
name = "train-gnn"
path = "src/tools/train_gnn.rs"
required-features = ["gnn-optimizer"]

[[bin]]
name = "bench-speed"
path = "benches/bench_speed.rs"

[[bin]]
name = "bench-jhal"
path = "benches/bench_jhal.rs"

[[bin]]
name = "bench-inferno"
path = "benches/bench_inferno.rs"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }
numpy = { version = "0.21", optional = true }
libc = "0.2"
lazy_static = "1.4"
parking_lot = "0.12"
matrixmultiply = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "2"
rustyline = "12"
rustc-hash = "2"
# rayon = "1"  # Replaced by custom threading engine
bumpalo = "3.14"
smallvec = { version = "1", features = ["union", "const_generics"] }
ahash = "0.8"
memmap2 = "0.9"
# Cranelift backend — optional, NOT required for the hand-written x86-64 JIT.
# The Phase 3 JIT (phase3_jit.rs / tracing_jit.rs) is self-contained and
# emits raw x86-64 machine code via mmap/mprotect.  Enable this feature
# only if you want a Cranelift-based backend as an alternative.
cranelift-codegen = { version = "0.110", optional = true }
cranelift-module = { version = "0.110", optional = true }
cranelift-jit = { version = "0.110", optional = true }
region = "3.0"
# XLA FFI bindings (optional, requires XLA library) - removed: not available on crates.io
# xla-ffi = { version = "0.1", optional = true }
# Threading engine dependencies
nix = { version = "0.28", features = ["sched"], optional = true }
num_cpus = "1.16"
windows = { version = "0.52", features = ["Win32_System_Threading"], optional = true }
# SMT verification (CEGIS loop)
z3 = { version = "0.12", optional = true }
# E-graph equality saturation
egg = { version = "0.6", optional = true }

[features]
default = ["ffi-c", "phase1", "phase2", "phase3-jit", "core-superopt"]
python = ["pyo3", "numpy"]
ffi-c = []
nightly = []
phase1 = []
phase2 = []
# Phase 3 JIT — hand-written x86-64 emitter, zero external deps beyond libc.
# Cranelift is an OPTIONAL backend, not a requirement.
phase3-jit = []
cranelift-backend = ["cranelift-codegen", "cranelift-module", "cranelift-jit"]
numa = ["nix"]
phase4-llvm = []
phase5-cow = []
phase6-simd = []
xla = []
gnn-optimizer = []
core-superopt = ["egg"]
legacy-passes = []
smt-verify = ["z3"]  # Requires libclang for z3-sys build
ultra-fast = ["phase3-jit", "phase6-simd", "core-superopt"]
full = ["python", "ffi-c", "phase1", "phase2", "phase3-jit", "cranelift-backend", "phase4-llvm", "phase5-cow", "phase6-simd", "gnn-optimizer", "core-superopt", "legacy-passes"]

[lints.rust]
dead_code = "warn"
unused_variables = "warn"
unused_mut = "warn"
unused_imports = "warn"
unused_macros = "warn"
unused_doc_comments = "warn"
private_interfaces = "allow"
non_camel_case_types = "allow"
unreachable_patterns = "warn"

# =============================================================================
# PERFORMANCE PROFILES
# =============================================================================

# Fast compile for development (default: `cargo build`)
[profile.dev]
opt-level = 1              # Basic optimizations for speed
codegen-units = 16         # Parallel codegen for fast builds
incremental = true         # Incremental compilation
debug = "line-tables-only" # Minimal debug info
panic = "unwind"
overflow-checks = true

# Production release: optimized for speed
[profile.release]
opt-level = 3
lto = "fat"               # Full LTO for maximum cross-crate inlining
codegen-units = 1          # Single unit for maximum inlining & optimization
panic = "abort"            # Removes unwinding machinery (~5% speedup)
strip = "symbols"
incremental = false
debug = false
overflow-checks = false
rpath = false

# Benchmarks: same as release
[profile.bench]
inherits = "release"

# MAXIMUM PERFORMANCE: use only for final builds (slow compile!)
[profile.max-perf]
inherits = "release"
lto = "fat"                # Full LTO (slow but best performance)
codegen-units = 1          # Single unit for maximum inlining
opt-level = 3
panic = "abort"
strip = "debuginfo"
debug = false
overflow-checks = false

[profile.release.build-override]
opt-level = 3

[profile.max-perf.build-override]
opt-level = 3
